<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Título -->
    <TextView
        android:id="@+id/tvNameReceita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:text="@string/receita_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Campo Valor -->
    <TextView
        android:id="@+id/tvValorNameReceita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/valor_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNameReceita" />

    <EditText
        android:id="@+id/etValorReceita"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/valor_hint"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvValorNameReceita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvValorNameReceita" />

    <!-- Campo Nome da Receita -->
    <TextView
        android:id="@+id/tvNomeReceitaName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/nome_receita_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvValorNameReceita" />

    <EditText
        android:id="@+id/etNomeReceitaValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/nome_receita_hint"
        android:inputType="text"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvNomeReceitaName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvNomeReceitaName" />

    <!-- Campo Categoria -->
    <TextView
        android:id="@+id/tvCategoriaNameReceita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/categoria_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNomeReceitaName" />

    <Spinner
        android:id="@+id/spinnerCategoriaReceita"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:minHeight="48dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvCategoriaNameReceita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCategoriaNameReceita" />

    <!-- Campo Data -->
    <TextView
        android:id="@+id/tvDataReceita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:text="Data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategoriaReceita" />

    <EditText
        android:id="@+id/etDataReceita"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="dd/mm/aaaa"
        android:inputType="date"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDataReceita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvDataReceita" />

    <!-- Botões -->
    <Button
        android:id="@+id/btnReceitaConfirmar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="51dp"
        android:text="@string/confirmar_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCancelarReceita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="51dp"
        android:text="@string/cancelar_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>